--- a/works/index.html
+++ b/works/index.html
@@ -1066,7 +1066,7 @@
                         </div>
                         <div id="tabpanel04" class="c-tabpanel" role="tabpanel">
                             <div class="works_photo_container pointer onclass">
-                                <img src="../img/eventposter/event poster.png" alt="10周年イベントの写真">
+                                <img src="../img/eventposter/eventposter.png" alt="10周年イベントの写真">
                                 <div class="mask">
                                     <a href="../works/branddesign/event/index.html">
                                         <div class="caption u-txtlp24">
